--- a/application.yml
+++ b/application.yml
@@ -37,7 +37,7 @@ eureka:
 
   client:
     serviceUrl:
-      defaultZone: http://localhost:1111/eureka/
+      defaultZone: http://192.168.1.116:5001/eureka/,http://192.168.1.116:5002/eureka/
 
 hystrix:
   command.default.execution.isolation.thread.timeoutInMilliseconds: 3000
