--- a/test/user-test.yml
+++ b/test/user-test.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.198:3306/user_service
+    url: jdbc:mysql://192.168.1.176:3306/user_service
     username: root
-    password: root
+    password: 921117
 
   cloud:
     stream:
