--- a/account.yml
+++ b/account.yml
@@ -7,7 +7,7 @@ spring:
     index: 0
 
   datasource:
-    url: jdbc:mysql://localhost:3306/account_service
+    url: jdbc:mysql://192.168.1.176:3306/account_service
     username: root
     password: 921117
     testWhileIdle: true
