--- a/product.yml
+++ b/product.yml
@@ -12,6 +12,7 @@ spring:
     password: 921117
     testWhileIdle: true
     validationQuery: SELECT 1
+    driver-class-name: com.mysql.jdbc.Driver
 
   cloud:
     stream:
