--- a/customer.yml
+++ b/customer.yml
@@ -7,7 +7,7 @@ spring:
     index: 0
 
   datasource:
-    url: jdbc:mysql://192.168.1.117:3306/customer_service
+    url: jdbc:mysql://localhost:3306/customer_service
     username: root
     password: 123456
     testWhileIdle: true
