--- a/user.yml
+++ b/user.yml
@@ -7,7 +7,7 @@ spring:
     index: 0
 
   datasource:
-    url: jdbc:mysql://192.168.1.176:3306/user_service
+    url: jdbc:mysql://192.168.1.176:3306/user
     username: root
     password: 921117
     testWhileIdle: true
