--- a/foundation.yml
+++ b/foundation.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: user
+    name: foundation
     index: 0
 
   datasource:
@@ -40,14 +40,14 @@ spring:
       bindings:
         input:
           # destination: testq1
-          group: user
+          group: foundation
           consumer:
             concurrency: 1
             partitioned: false
             headerMode: raw
         output:
           # destination: testq2
-          group: user
+          group: foundation
           producer:
             # partitionKeyExpression: null
             # partitionKeyExtractorClass: null
