--- a/uaa.yml
+++ b/uaa.yml
@@ -1,13 +1,13 @@
 server:
-  port: 23112
+  port: 23103
 
 spring:
   application:
-    name: account
+    name: uaa
     index: 0
 
   datasource:
-    url: jdbc:mysql://192.168.1.176:3306/account_service
+    url: jdbc:mysql://192.168.1.176:3306/user
     username: root
     password: 921117
     testWhileIdle: true
@@ -40,14 +40,14 @@ spring:
       bindings:
         input:
           # destination: testq1
-          group: account
+          group: uaa
           consumer:
             concurrency: 1
             partitioned: false
             headerMode: raw
         output:
           # destination: testq2
-          group: account
+          group: uaa
           producer:
             # partitionKeyExpression: null
             # partitionKeyExtractorClass: null
