--- a/product.yml
+++ b/product.yml
@@ -1,9 +1,24 @@
 server:
   port: 23141
+  
 spring:
   application:
     name: product
     index: 0
+    
+  datasource:
+    url: jdbc:mysql://192.168.1.176:3306/product
+    username: root
+    password: 921117
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+
+  boot:
+    admin:
+      client:
+        prefer-ip: true # 解决windows下运行时无法识别主机名的问题
+      url: http://192.168.1.176:7900/admin # 向服务端注册的地址
+      
   cloud:
     stream:
       instanceCount: 1
@@ -51,5 +66,14 @@ mybatis:
   mapper-locations:  classpath*:mapper/*.xml
   configLocation: classpath:mybatis-config.xml
 
-
+management:
+  port: 7901
+  security:
+    enabled: false # spring-boot 1.5.2之后严格执行安全策略，所以需要配置这个为false
+info: #定义各种额外的详情给服务端显示
+  app:
+    name: "@project.name@" #从pom.xml中获取
+    description: "@project.description@"
+    version: "@project.version@"
+    spring-boot-version: "@project.parent.version@"
 
