--- a/product.yml
+++ b/product.yml
@@ -66,14 +66,14 @@ mybatis:
   mapper-locations:  classpath*:mapper/*.xml
   configLocation: classpath:mybatis-config.xml
 
-management:
-  port: 7901
-  security:
-    enabled: false # spring-boot 1.5.2之后严格执行安全策略，所以需要配置这个为false
-info: #定义各种额外的详情给服务端显示
-  app:
-    name: "@project.name@" #从pom.xml中获取
-    description: "@project.description@"
-    version: "@project.version@"
-    spring-boot-version: "@project.parent.version@"
+#management:
+ # port: 7901
+  #security:
+   # enabled: false # spring-boot 1.5.2之后严格执行安全策略，所以需要配置这个为false
+#info: #定义各种额外的详情给服务端显示
+  #app:
+    #name: "@project.name@" #从pom.xml中获取
+    #description: "@project.description@"
+    #version: "@project.version@"
+    #spring-boot-version: "@project.parent.version@"
 
